scripts/gabesite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gabesite-client
  labels:
    app: gabesite
spec:
  selector:
    matchLabels:
      app: gabesite
      tier: web
  template:
    metadata:
      labels:
        app: gabesite
        tier: web
    spec:
      containers:
      - name: gabesite-client
        image: gcr.io/gabesite/gabesite-client:v1.3
        ports:
        - containerPort: 8080
