scripts/gabesite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gabesite
  labels:
    app: gabesite
spec:
  selector:
    app: gabesite
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
