scripts/gabesite-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gabesite-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gabesite-web-ip"
spec:
  backend:
    serviceName: gabesite-web
    servicePort: 8080
